test/types/tuple/bradc/underDeTuple.good
underDeTuple.chpl:5: error: tuple size must match the number of grouped variables
