test/types/tuple/bradc/underDeTuple.chpl
var t = (1, 2, 3);

var x, y: int;

(x,y) = t;

writeln("x = ", x);
writeln("y = ", y);
writeln("t = ", t);
